force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/Apttus_DocuApi__DocuSignUser__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>DocuSign User</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>