force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/fields/Apttus_DocuApi__ContactLookup__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__ContactLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Lookup System only user.(For contact search to get Email and Title) as recipient</description>
    <label>Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DocuSignUsers</relationshipLabel>
    <relationshipName>DocuSignUsersContactLookup</relationshipName>
    <type>Lookup</type>
</CustomField>