force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/fields/Apttus_DocuApi__Default__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This DocuSign is credential is will be used as default OAuth info to handle SFDC Organization wide needs</description>
    <inlineHelpText>This DocuSign is credential is will be used as default OAuth info to handle SFDC Organization wide needs</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>