force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/fields/Apttus_DocuApi__DocuSignAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocuSignAccountId__c</fullName>
    <description>DocuSign Account Id from DocuSign System</description>
    <inlineHelpText>DocuSign Account Id from DocuSign System</inlineHelpText>
    <label>DocuSign Account Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>