force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/fields/Apttus_DocuApi__DocuSignEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocuSignEmailAddress__c</fullName>
    <description>Email Address form DocuSign system</description>
    <inlineHelpText>Email Address form DocuSign system</inlineHelpText>
    <label>DocuSign Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>