force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/fields/Apttus_DocuApi__DocuSignServerEnvironment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocuSignServerEnvironment__c</fullName>
    <defaultValue>&quot;PROD&quot;</defaultValue>
    <description>DocuSign Server Environment</description>
    <inlineHelpText>DocuSign Server Environment</inlineHelpText>
    <label>DocuSign Server Environment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>