force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/fields/Apttus_DocuApi__DocuSignUserName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocuSignUserName__c</fullName>
    <description>User name from DocuSign system</description>
    <inlineHelpText>User name from DocuSign system</inlineHelpText>
    <label>DocuSign User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>