force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/fields/Apttus_DocuApi__LastEnvelopeStatusSyncTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__LastEnvelopeStatusSyncTime__c</fullName>
    <description>Field is used by Apttus system internal to keep track of DocuSign status sync</description>
    <inlineHelpText>Field is used by Apttus system internal to keep track of DocuSign status sync</inlineHelpText>
    <label>Last Envelope Status Sync Time</label>
    <type>DateTime</type>
</CustomField>