force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/fields/Apttus_DocuApi__LastRecipientStatusSyncTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__LastRecipientStatusSyncTime__c</fullName>
    <description>DateTime to keep track of the last Successful Sync of Envelopes Recipient status System use only not to be used on Layout</description>
    <inlineHelpText>DateTime to keep track of the last Successful Sync of Envelopes Recipient status System use only not to be used on Layout</inlineHelpText>
    <label>Last Recipient Status Sync Time</label>
    <type>DateTime</type>
</CustomField>