force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/fields/Apttus_DocuApi__LastSyncTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__LastSyncTime__c</fullName>
    <description>Field is used by Apttus system internal to keep track of DocuSign data sync</description>
    <inlineHelpText>Field is used by Apttus system internal to keep track of DocuSign data sync</inlineHelpText>
    <label>Last Sync Time</label>
    <type>DateTime</type>
</CustomField>