force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/fields/Apttus_DocuApi__SyncStatusMessage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__SyncStatusMessage__c</fullName>
    <description>DocuSign sync status message : Apttus system internal use only</description>
    <inlineHelpText>DocuSign sync status message : Apttus system internal use only</inlineHelpText>
    <label>Sync Status Message</label>
    <type>TextArea</type>
</CustomField>