force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/fields/Apttus_DocuApi__User__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who is registered/ Entered credential with DocuSign system</description>
    <inlineHelpText>The user who is registered/ Entered credential with DocuSign system</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DocuSignUsers</relationshipName>
    <type>Lookup</type>
</CustomField>