force-app/main/default/objects/Apttus_DocuApi__DocuSignUser__c/listViews/Apttus_DocuApi__All.listView-meta.xml
<ListView>
    <fullName>Apttus_DocuApi__All</fullName>
    <columns>Apttus_DocuApi__Default__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Apttus_DocuApi__User__c</columns>
    <columns>Apttus_DocuApi__DocuSignEmailAddress__c</columns>
    <columns>Apttus_DocuApi__DocuSignUserName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>